fix double border on combo box when field is invalid

--- a/packages/esm-patient-labs-app/src/lab-orders/add-lab-order/lab-order-form.scss
+++ b/packages/esm-patient-labs-app/src/lab-orders/add-lab-order/lab-order-form.scss
@@ -27,10 +27,6 @@
     padding-right: spacing.$spacing-05;
   }
 
-  :global(.cds--list-box) {
-    border: none;
-  }
-
   :global(.cds--number__control-btn) {
     border: 0;
   }
